--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Camille Mazzolini</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Camille Mazzolini Kinésithérapeute spécialisée en périnéologie" />
+    <meta name="author" content="Camille Mazzolini" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
