--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Cookies consentement -->
+ <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="9b0fdac6-646f-4deb-8c49-9eda4bdd1cf0" type="text/javascript" async></script>    
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QMXX04KM5G"></script>
 <script>
