--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
   <head>
 <!-- Cookies consentement -->
- <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="9b0fdac6-646f-4deb-8c49-9eda4bdd1cf0" type="text/javascript" async></script>    
+<script type="text/javascript">
+var _iub = _iub || [];
+_iub.csConfiguration = {"siteId":3882999,"cookiePolicyId":98928534,"lang":"fr","storage":{"useSiteId":true}};
+</script>
+<script type="text/javascript" src="https://cs.iubenda.com/autoblocking/3882999.js"></script>
+<script type="text/javascript" src="//cdn.iubenda.com/cs/gpp/stub.js"></script>
+<script type="text/javascript" src="//cdn.iubenda.com/cs/iubenda_cs.js" charset="UTF-8" async></script>
+    
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-QMXX04KM5G"></script>
 <script>
