--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ _iub.csConfiguration = {"siteId":3882999,"cookiePolicyId":98928534,"lang":"fr","
 </script>  
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Camille Mazzolini</title>
-    <meta name="description" content="Camille Mazzolini Kinésithérapeute spécialisée en périnéologie" />
+    <title>Camille Mazzolini Kinésithérapeute spécialisée en périnéologie</title>
+    <meta name="description" content="Camille Mazzolini Kinésithérapeute spécialisée en périnéologie, rééducation abdominale, rééducation périnéale, diastasis, yoga pré et post natal.Basé à Pluneret et Vannes." />
     <meta name="author" content="Camille Mazzolini" />
     <meta property="og:image" content="/og-image.png" />
   </head>
