--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ _iub.csConfiguration = {"siteId":3882999,"cookiePolicyId":98928534,"lang":"fr","
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Camille Mazzolini Kinésithérapeute spécialisée en périnéologie</title>
-    <meta name="description" content="Camille Mazzolini Kinésithérapeute spécialisée en périnéologie, rééducation abdominale, rééducation périnéale, diastasis, yoga pré et post natal.Basé à Pluneret et Vannes." />
+    <meta name="description" content="Mazzolini Kinésithérapeute spécialisée en périnéologie, rééducation abdominale, rééducation périnéale, diastasis, yoga pré et post natal.Pluneret et Vannes" />
     <meta name="author" content="Camille Mazzolini" />
     <meta property="og:image" content="/og-image.png" />
   </head>
