--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@ _iub.csConfiguration = {"siteId":3882999,"cookiePolicyId":98928534,"lang":"fr","
 
   <body>
     <div id="root"></div>
+    <img
+        src="/public/bassin.jpeg"
+        alt="rééducation périnéale"
+        style="max-width: 100%; height: auto; display: block; margin: 0 auto;"
+      />
+    </div>
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
