--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ _iub.csConfiguration = {"siteId":3882999,"cookiePolicyId":98928534,"lang":"fr","
         padding: 0;
       }
 
-      .header-container {
+      .title-container {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -41,13 +41,13 @@ _iub.csConfiguration = {"siteId":3882999,"cookiePolicyId":98928534,"lang":"fr","
         margin-top: 20px;
       }
 
-      .header-container h1 {
+      .title-container h1 {
         flex: 1;
         font-size: 2rem;
         margin: 0;
       }
 
-      .header-container img {
+      .title-container img {
         flex: 0 0 auto;
         max-width: 75%;
         height: auto;
@@ -57,9 +57,9 @@ _iub.csConfiguration = {"siteId":3882999,"cookiePolicyId":98928534,"lang":"fr","
   </head>
 
   <body>
-    <div class="header-container">
+    <div class="title-container">
       <h1>Camille Mazzolini Kinésithérapeute</h1>
-      <img src="/path-to-your-image.jpg" alt="Camille Mazzolini" />
+      <img src="/public/bassin.jpg" alt="Camille Mazzolini" />
     </div>
     <div id="root"></div>
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
