--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@ _iub.csConfiguration = {"siteId":3882999,"cookiePolicyId":98928534,"lang":"fr","
 
   <body>
     <div id="root"></div>
+      <!-- Conteneur pour l'image -->
+  <div class="image-container">
+    <img src="/public/bassin.jpeg" alt="Périnée" />
+  </div>
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
